# Fitness-Reservation

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml  健身场馆预约系统数据库设计文档.md  健身预约系统前端详细设计文档.md  健身预约系统功能说明文档.md  健身预约系统后端详细设计文档.md
app/: deps.py  main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  security.py
app/db/: database.py  mongo.py
app/models/: __init__.py  facility.py  feedback.py  leader_reserved_time.py  notification.py  profile.py  recurring_reservation.py  reservation.py  reservation_rules.py  reservation_time_slot_delete.py  sport_venue.py  user.py  user_activity.py  user_log.py  venue.py  venue_available_time_slot.py  waiting_list.py
app/schemas/: facility.py  feedback.py  leader_reserved_time.py  notification.py  profile.py  reservation.py  reservation_time_slot.py  sport_venue.py  stats.py  token.py  user.py  venue.py  venue_available_time_slot.py  waiting_list.py
app/scripts/: init_db.py
app/services/: auth.py  facility_service.py  feedback_service.py  leader_reserved_time_service.py  log_services.py  notification_service.py  profile_service.py  reservation_conflict_service.py  reservation_service.py  reservation_time_slot_service.py  sport_venue_service.py  stats_service.py  user_service.py  venue_available_time_slot_service.py  venue_service.py  waiting_list_service.py
app/utils/: email.py  sms.py  templates.py
celery_tasks/: celery_app.py
celery_tasks/tasks/: log_tasks.py  notification_tasks.py  venue_tasks.py
frontend/: package-lock.json  package.json
(+64 files in other folders)
